AUGREL/src/objects/UC_Case_Defaults__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Identifies default values for UC Cases</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Criteria_Field__c</fullName>
        <label>Additional Criteria Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Sub_Status__c</fullName>
        <label>New Sub Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>UC Case Defaults</label>
</CustomObject>